hphp/hack/test/typecheck/tconst/generic_tc_invalid1.php.legacy.exp
File "generic_tc_invalid1.php", line 25, characters 10-11:
Invalid return type (Typing[4110])
File "generic_tc_invalid1.php", line 22, characters 19-24:
This is a string
File "generic_tc_invalid1.php", line 9, characters 18-20:
It is incompatible with an int
